--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -1,70 +1,81 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *:focus:not(:focus-visible) {
-    outline: none;
+  outline: none;
 }
 
 html {
-    font-family: 'Poppins', sans-serif; // шрифт по умолчанию по сайту
-    font-size: 10px; // на разрешении 1600 0.625vw === 10px
-    font-style: normal;
-    font-weight: 500;
-    -webkit-animation: bugfix infinite 1s;
-    line-height: 1.2;
-    margin: 0;
-    padding: 0;
-    
-    // плавный переход по якорным ссылкам
-    scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif; // шрифт по умолчанию по сайту
+  font-size: 10px; // на разрешении 1600 0.625vw === 10px
+  font-style: normal;
+  font-weight: 500;
+  -webkit-animation: bugfix infinite 1s;
+  line-height: 1.2;
+  margin: 0;
+  padding: 0;
+
+  // плавный переход по якорным ссылкам
+  scroll-behavior: smooth;
 }
 
 body {
-    font-style: normal;
-    font-weight: normal;
-    -webkit-animation: bugfix infinite 1s;
-    line-height: 1.2;
-    margin: 0;
-    padding: 0;
-    color: #025A5B; // цвет по умолчанию текста по сайту
-    background-color: #F8F8F8; //
+  font-style: normal;
+  font-weight: normal;
+  -webkit-animation: bugfix infinite 1s;
+  line-height: 1.2;
+  margin: 0;
+  padding: 0;
+  color: #025a5b; // цвет по умолчанию текста по сайту
+  background-color: #f8f8f8; //
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f8f8f8;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #025a5b;
+    border-radius: 20px;
+    border: 3px solid #f8f8f8;
+  }
 }
 
 input,
 textarea {
-    -webkit-animation: bugfix infinite 1s;
-    line-height: inherit;
-    margin: 0;
-    padding: 0;
+  -webkit-animation: bugfix infinite 1s;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    color: unset;
+  color: unset;
 }
 
 a,
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button,
 input,
 a,
 textarea {
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+
+  &:focus {
     outline: none;
-    cursor: pointer;
-    font: inherit;
+  }
 
-    &:focus {
-        outline: none;
-    }
-
-    &:active {
-        outline: none;
-    }
+  &:active {
+    outline: none;
+  }
 }
 
 h1,
@@ -73,75 +84,74 @@ h3,
 h4,
 h5,
 h6 {
-    font: inherit;
-    margin: 0;
-    padding: 0;
+  font: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    flex-shrink: 0;
+  width: 100%;
+  flex-shrink: 0;
 }
 
 button {
-    border: none;
-    color: inherit;
-    font: inherit;
-    text-align: inherit;
-    padding: 0;
-    background-color: inherit;
+  border: none;
+  color: inherit;
+  font: inherit;
+  text-align: inherit;
+  padding: 0;
+  background-color: inherit;
 }
 
 ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 ul li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .container {
-    max-width: 117rem;
-    margin: 0 auto;
+  max-width: 117rem;
+  margin: 0 auto;
 }
 .title {
-    font-family: 'Titan One', sans-serif; 
-    max-width: 60rem;
-    text-align: center;
-    font-weight: 700;
-    font-size: 5rem;
-    line-height: 1.2;
-    overflow: hidden;
-    letter-spacing: .5rem;
+  font-family: "Titan One", sans-serif;
+  max-width: 60rem;
+  text-align: center;
+  font-weight: 700;
+  font-size: 5rem;
+  line-height: 1.2;
+  overflow: hidden;
+  letter-spacing: 0.5rem;
 }
 .text {
-    text-align: center;
-    font-size: 1.8rem;
-    line-height: 1.5;
-    max-width: 50rem;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  max-width: 50rem;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
-@media (max-width: 48rem){
-    .container {
-        width: 40rem;
-    }
+@media (max-width: 48rem) {
+  .container {
+    width: 40rem;
+  }
 }
