--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ input[type=number] {
   max-width: 35rem;
   border-radius: 5rem;
   transition-duration: 500ms;
+  opacity: 0.9;
 }
 .who__img img:hover {
   transform: scale(1.2);
