--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,8 @@ $second-color: #e6984e;
       max-width: 35rem;
       border-radius: 5rem;
       transition-duration: 500ms;
+      opacity: 0.9;
+      // filter: grayscale(0.7);
       &:hover {
         transform: scale(1.2);
         padding: 0.1rem;
