--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,22 @@ input[type=number] {
 .portfolio__item-img:hover {
   transform: scale(1.01);
 }
+.portfolio__links {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.portfolio__link {
+  padding: 10px 20px;
+  border: 1px solid #025a5b;
+  border-radius: 15px;
+  font-size: 18px;
+  transition-duration: 500ms;
+}
+.portfolio__link:hover {
+  background-color: #025a5b;
+  color: #e6984e;
+}
 
 .contacts {
   border-radius: 30px 30px 0 0;
@@ -391,11 +407,11 @@ input[type=number] {
 }
 
 .swiper {
-  padding-top: 7rem;
+  padding-top: 5rem;
 }
 .swiper__buttons {
   position: absolute;
-  top: 2rem;
+  top: 0;
   cursor: pointer;
   left: 50%;
   z-index: 5;
@@ -461,6 +477,9 @@ input[type=number] {
   }
   .who__img img:hover {
     transform: none;
+  }
+  .who__ami-content {
+    overflow: auto;
   }
   .skills {
     min-width: 27rem;
