--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,6 +196,22 @@ $second-color: #e6984e;
       }
     }
   }
+  &__links {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+  }
+  &__link {
+    padding: 10px 20px;
+    border: 1px solid $first-color;
+    border-radius: 15px;
+    font-size: 18px;
+    transition-duration: 500ms;
+    &:hover {
+      background-color: $first-color;
+      color: $second-color;
+    }
+  }
 }
 .contacts {
   border-radius: 30px 30px 0 0;
@@ -224,10 +240,10 @@ $second-color: #e6984e;
   }
 }
 .swiper {
-  padding-top: 7rem;
+  padding-top: 5rem;
   &__buttons {
     position: absolute;
-    top: 2rem;
+    top: 0;
     cursor: pointer;
     left: 50%;
     z-index: 5;
@@ -315,6 +331,9 @@ $second-color: #e6984e;
         }
       }
     }
+  }
+  .who__ami-content {
+    overflow: auto;
   }
   .skills {
     min-width: 27rem;
